# rich

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  example_game.py  pyproject.toml  require.txt  requirements.txt  story.md  大富翁简化版游戏项目.md  测试出来的bug.md  测试功能补充要求.md
tests/: .gitignore  CMakeLists.txt  README.md  run_all_tests.bat  run_json_tests.sh  run_tests.bat  run_tests.sh  runner.py  test_dice.py  test_game_config.cpp
tests/cases/helloworld/: cmdlist.txt  expected.txt
tests/json_cases/_root/god_of_treasure/: dump.json  expected_result.json
tests/json_cases/_root/next_turnaround/: dump.json
tests/json_cases/_root/now_player_out_of_bounds/: dump.json  preset.json
tests/json_cases/_root/preset_basic/: dump.json  expected_result.json
tests/json_cases/_root/simple_init/: dump.json
tests/json_cases/_root/step_70/: dump.json
tests/json_cases/_root/step_move/: dump.json  expected_result.json
tests/json_cases/_root/test_fund_out_of_bound/: dump.json  expected_result.json  preset.json
tests/json_cases/bankrupt/bankrupt_clear/: dump.json  expected_result.json  preset.json
tests/json_cases/bankrupt/bankrupt_enter/: dump.json  expected_result.json
tests/json_cases/bankrupt/bankrupt_no/: dump.json  expected_result.json  input.txt  preset.json
tests/json_cases/barrier/barrier_go/: dump.json  preset.json
tests/json_cases/barrier/barrier_invalid/: dump.json
tests/json_cases/barrier/barrier_special/: dump.json  expected_result.json
tests/json_cases/break_up/break_up_1/: dump.json  expected_result.json  input.txt
tests/json_cases/break_up/break_up_2/: dump.json  expected_result.json  input.txt  preset.json
tests/json_cases/break_up/break_up_3/: dump.json  expected_result.json  input.txt  preset.json
tests/json_cases/break_up/test_houses_recycle/: dump.json  preset.json
tests/json_cases/breakup/: dump.json  expected_result.json  input.txt  preset.json
tests/json_cases/buffs/god_countdown_one_turn/: expected_result.json  preset.json
tests/json_cases/buffs/god_counter/: dump.json  expected_result.json  preset.json
tests/json_cases/buffs/god_effect/: dump.json  expected_result.json  input.txt  preset.json
tests/json_cases/buffs/god_effect_2/: dump.json  expected_result.json  input.txt  preset.json
tests/json_cases/buffs/god_free_with_one_left/: expected_result.json  preset.json
tests/json_cases/buffs/god_from_gift_rent_free/: expected_result.json  input.txt  preset.json
tests/json_cases/buffs/god_gift_refresh_additive/: expected_result.json  input.txt  preset.json
tests/json_cases/buffs/hospital_countdown/: dump.json  expected_result.json  preset.json
tests/json_cases/buffs/hospital_release/: dump.json  expected_result.json  input.txt  preset.json
tests/json_cases/buffs/hospital_release_then_move/: dump.json  expected_result.json  input.txt  preset.json
tests/json_cases/buffs/hospital_step_skip/: dump.json  expected_result.json  input.txt  preset.json
tests/json_cases/buffs/hospital_stepby/: dump.json  expected_result.json  preset.json
tests/json_cases/buffs/hospital_vs_prison_priority/: dump.json  expected_result.json  input.txt  preset.json
tests/json_cases/buffs/prison_countdown/: dump.json  expected_result.json  preset.json
tests/json_cases/buffs/prison_release_then_move/: dump.json  expected_result.json  input.txt  preset.json
tests/json_cases/buffs/prison_step_skip/: dump.json  expected_result.json  input.txt  preset.json
tests/json_cases/buy_props/buy_props1/: dump.json
tests/json_cases/buy_props/buy_props2/: dump.json
tests/json_cases/buy_props/buy_props3/: dump.json
tests/json_cases/buy_props1/: dump.json
tests/json_cases/buy_props3/: dump.json
tests/json_cases/buy_props4/: dump.json  expected_result.json
tests/json_cases/common/help/: dump.json  (+2 more)
tests/json_cases/gift_1/: dump.json
tests/json_cases/gift_2/: dump.json
tests/json_cases/gift_3/: dump.json
tests/json_cases/god_of_treasure/: dump.json
tests/json_cases/next_turnaround/: dump.json
tests/json_cases/preset/: dump.json
tests/json_cases/preset_basic/: dump.json  expected_result.json  preset.json
tests/json_cases/preset_nowplayer/: dump.json
tests/json_cases/robot_clear/: dump.json  expected_result.json
tests/json_cases/simple_init/: dump.json  expected_result.json
tests/json_cases/state/: expected_result.json  input.txt  preset.json
tests/json_cases/step_move/: dump.json  expected_result.json  input.txt
tests/json_cases/upgrade/: dump.json
tests/json_cases/use_blocks/: expected_result.json  input.txt  preset.json
tests/legacy/: README.md  test_player.cpp  test_player_manager.cpp
(+431 files in other folders)
